Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Welcome — stijnbouwmeester</title>
+  <title>Stijn Bouwmeester</title>
 </head>
 <body>
-  <h1>Hello — this is my GitHub Pages site</h1>
-  <p>Replace this with your content. To edit, change index.html and push to GitHub.</p>
+  <h1>Hallo, ik ben Stijn :D</h1>
+  <p>yup, zo heet ik</p>
 </body>
 </html>
