--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>STIJN'S OFFICIAL UNOFFICIAL SITE</title>
+  <title>STIJN'S STUKJE INTERNET</title>
 
   <!-- Pixel / monospace vibe -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
@@ -14,36 +14,36 @@
   <!-- Tiled, noisy background and pattern are CSS-driven -->
   <div class="topbar">
     <marquee behavior="scroll" direction="left" scrollamount="6">
-      WELCOME TO THE ARCHIVE OF ODDITIES * DO NOT TRUST EVERYTHING * CHECK THE SIGNALS * CLICK AT YOUR OWN RISK
+      WELCOME OP MIJN WEBSITE :D
     </marquee>
   </div>
 
   <header class="header">
-    <h1 class="logo">STIJN'S OFFICIAL <span class="neon">UNOFFICIAL</span></h1>
-    <p class="subtitle">A humble archive of weird links, lost transmissions, and definitely-not-government stuff.</p>
+    <h1 class="logo">STIJN'S STUKJE <span class="neon">INTERNET</span></h1>
+    <p class="subtitle">JOEPIE DE POEPIE</p>
   </header>
 
   <nav class="menu">
     <a href="#weird">WEIRD</a> |
-    <a href="#files">FILES</a> |
+    <a href="#files">LOL</a> |
     <a href="guestbook.html">GUESTBOOK</a> |
     <a href="#contact">CONTACT</a>
   </nav>
 
   <main class="main">
     <section id="weird" class="panel">
-      <h2>RECENT TRANSMISSIONS</h2>
-      <p class="glitch">[ 03:14 GMT ] — The star chart coordinates are wrong. The dot moves at night. I recorded it. Listen.</p>
+      <h2>LOREM</h2>
+      <p class="glitch">IPSUM DOLOR SIT AMET</p>
 
       <div class="retro-box">
-        <h3>Featured Leak</h3>
-        <p>This is a completely fictional leak used for demonstration. Replace with your content.</p>
-        <a class="weird-link" href="#">DOWNLOAD THE LEAK (zip)</a>
+        <h3>HOIII</h3>
+        <p>HALLOOOOO</p>
+        <a class="weird-link" href="#">HOIHOI</a>
       </div>
     </section>
 
     <section id="files" class="panel">
-      <h2>FILES & LINKS</h2>
+      <h2>TEST</h2>
       <ul class="link-list">
         <li><a href="#">.TXT — notes-from-1999.txt</a></li>
         <li><a href="#">.GIF — glowing-planet.gif</a></li>
@@ -55,14 +55,12 @@
 
     <section id="contact" class="panel">
       <h2>CONTACT</h2>
-      <p>If you dare, email: <a href="mailto:hello@stijnbouwmeester.nl">hello@stijnbouwmeester.nl</a></p>
-      <p>Want a real form? See <code>guestbook.html</code> or ask me to connect Formspree.</p>
+      <p>MAIL ME: <a href="mailto:hello@stijnbouwmeester.nl">hello@stijnbouwmeester.nl</a></p>
     </section>
   </main>
 
   <footer class="footer">
-    <p class="small">This site is for fun. All conspiracy content is pretend. Replace it with your own theories.</p>
-    <p class="small">Made with questionable taste and an affinity for blinking gifs.</p>
+    <p class="small">Dit was het al :(</p>
   </footer>
 
   <script>
