Refine comments and text in index.html
Updated comments for clarity and improved text readability.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </div>
   </header>
 
-  <!-- Main area with 3 boxes horizontally aligned -->
-  <main class="main">
-    <div class="boxes">
+  <!-- Main area with 3 boxes horizontally aligned (never wrap) -->
+  <main class="main" role="main">
+    <div class="boxes" aria-label="Three boxes row">
       <article class="box">
         <h2>BOX ONE</h2>
-        <p>Short text or link. Replace this paragraph with your content. Keep it short so everything fits on one screen.</p>
+        <p>Short text or link. Replace this paragraph with your content. Keep it concise so it reads well.</p>
         <p><a class="btn" href="#">OPEN</a></p>
       </article>
 
