--- a/index.html
+++ b/index.html
@@ -3,120 +3,223 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Speaking in Tongues - HOME PAGE</title>
+  <title>~* SPEAKING IN TONGUES *~ (OFFICIAL???)</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
+  <!-- floating trash gifs -->
+  <div class="floaty f1" aria-hidden="true"></div>
+  <div class="floaty f2" aria-hidden="true"></div>
+  <div class="floaty f3" aria-hidden="true"></div>
+
   <div class="page">
+    <div class="rainbow-border"></div>
+
     <header class="top">
       <div class="top-left">
         <div class="cdbox">
-          <div class="cd"></div>
-          <div class="cdtext">CD Zone</div>
+          <div class="cd spin"></div>
+          <div class="cdtext">CD ZONE</div>
+          <div class="tiny blink">FREE MP3Z!!</div>
         </div>
       </div>
 
       <div class="top-center">
         <div class="title">
-          <span class="t1">Speaking in</span>
-          <span class="t2">Tongues</span>
+          <span class="t1 wobble">Speaking in</span>
+          <span class="t2 wobble2">Tongues</span>
         </div>
-        <div class="strap">HOMEPAGE</div>
+        <div class="strap blink-fast">HOMEPAGE</div>
+        <div class="sub">
+          <span class="sparkle">✦</span>
+          <span class="blink">BEST VIEWED 800x600</span>
+          <span class="sparkle">✦</span>
+        </div>
       </div>
 
       <div class="top-right">
         <div class="sound">
           <div class="speaker"></div>
-          <div class="soundtext">SOUND ON!</div>
+          <div class="soundtext blink">SOUND ON!!</div>
+          <div class="tiny">(TURN UR SPEAKERS UP)</div>
         </div>
       </div>
     </header>
 
+    <marquee class="marq" behavior="alternate" scrollamount="10">
+      ★★★ WELCOME 2 MY HOMEPAGE!!! ★★★ SIGN MY GUESTBOOK!!! ★★★ NEW UPDATES!!! ★★★
+    </marquee>
+
     <main class="mid">
       <!-- LEFT NAV -->
       <aside class="panel left">
+        <div class="panel-title blink-fast">NAVIGATION</div>
         <nav class="nav">
-          <a class="navbtn" href="#">HOME</a>
-          <a class="navbtn" href="#">BAND INFO</a>
-          <a class="navbtn" href="#">LYRICS</a>
-          <a class="navbtn" href="#">PHOTOS</a>
-          <a class="navbtn" href="#">LINKS!!!</a>
+          <a class="navbtn" href="#"><span class="pix p-home"></span> HOME</a>
+          <a class="navbtn" href="#"><span class="pix p-info"></span> BAND INFO</a>
+          <a class="navbtn" href="#"><span class="pix p-lyrics"></span> LYRICS</a>
+          <a class="navbtn" href="#"><span class="pix p-photos"></span> PHOTOS</a>
+          <a class="navbtn" href="#"><span class="pix p-links"></span> LINKS!!!</a>
         </nav>
 
+        <div class="divider"></div>
+
         <div class="guestbook">
-          <div class="gb-title">Sign My Guestbook!</div>
-          <a class="gb-btn" href="#">VIEW GUESTBOOK!</a>
+          <div class="gb-title wobble">SIGN MY GUESTBOOK!!!</div>
+          <a class="gb-btn blink" href="#">VIEW GUESTBOOK!</a>
+          <div class="tiny">pls dont hack me thx</div>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="webring">
+          <div class="webring-title">~* WEBRING *~</div>
+          <div class="webring-row">
+            <a href="#" class="tinybtn">◄ prev</a>
+            <a href="#" class="tinybtn">random</a>
+            <a href="#" class="tinybtn">next ►</a>
+          </div>
         </div>
       </aside>
 
       <!-- CENTER CONTENT -->
       <section class="panel center">
-        <div class="globe"></div>
-        <div class="welcome">Welcome to our site!</div>
+        <div class="globe pixelate"></div>
 
-        <h2 class="whatsnew">What's New?</h2>
-        <div class="updated">UPDATED!!!!</div>
+        <div class="welcome">
+          <span class="blink">WELCOME</span> TO MY SITE!!!!
+          <span class="sparkle">✦✦✦</span>
+        </div>
+
+        <h2 class="whatsnew">WHAT'S NEW?</h2>
+        <div class="updated blink-fast">UPDATED!!!!</div>
 
         <ul class="bullets">
-          <li>New Tour Dates Posted!</li>
-          <li>Under Construction!</li>
+          <li><span class="hot">NEW TOUR DATES POSTED!!!</span></li>
+          <li>NEW MIDI FILES ADDED (lol)</li>
+          <li class="blink">I GOT A NEW BACKGROUND!!!!</li>
         </ul>
 
         <div class="construction">
           <div class="stripe">UNDER CONSTRUCTION!</div>
-          <div class="tiny-worker" title="tiny worker dude"></div>
+          <div class="tiny-worker"></div>
         </div>
 
         <div class="construction2">
           <div class="cone"></div>
-          <div class="stripe2">Under Construction!</div>
+          <div class="stripe2">UNDER CONSTRUCTION!</div>
+          <div class="cone"></div>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="guestbook-mini">
+          <div class="mini-title">MESSAGE BOARD:</div>
+          <div class="mini-msg">
+            <span class="name">xX_SonicFan69_Xx:</span> this site rules!!!
+          </div>
+          <div class="mini-msg">
+            <span class="name">MIDI-LORD:</span> can u upload track 3?? thx
+          </div>
+          <div class="mini-msg blink">
+            <span class="name">ADMIN:</span> NO SWEARING!!!!
+          </div>
         </div>
       </section>
 
       <!-- RIGHT LINKS -->
       <aside class="panel right">
         <div class="coolstuff">
-          <div class="cooltitle">Cool Stuff!</div>
+          <div class="cooltitle wobble2">COOL STUFF!</div>
 
           <a class="coolitem" href="#">
-            <span class="icon music"></span>
-            <span>MP3 Downloads</span>
-            <span class="arrow">▶</span>
+            <span class="pix p-music"></span>
+            <span>MP3 DOWNLOADS</span>
+            <span class="arrow blink">▶▶</span>
           </a>
 
           <a class="coolitem" href="#">
-            <span class="icon palette"></span>
-            <span>Fan Art Gallery</span>
+            <span class="pix p-art"></span>
+            <span>FAN ART GALLERY</span>
           </a>
 
           <a class="coolitem" href="#">
-            <span class="icon pc"></span>
-            <span>Retro Chat Room</span>
-            <span class="arrow">▶</span>
+            <span class="pix p-chat"></span>
+            <span>RETRO CHAT ROOM</span>
+            <span class="arrow blink-fast">▶</span>
           </a>
+
+          <div class="divider"></div>
+
+          <div class="stamps">
+            <div class="stamp blink">NO CSS!!!</div>
+            <div class="stamp">IE4 OK</div>
+            <div class="stamp">Netscape</div>
+            <div class="stamp hotstamp blink-fast">AWESOME</div>
+          </div>
+
+          <div class="divider"></div>
+
+          <marquee class="marq2" direction="up" scrollamount="2" height="110">
+            <div>• NEW: MIDI PACK!!!</div>
+            <div>• VOTE 4 MY SITE!!!</div>
+            <div class="blink">• UNDER CONSTRUCTION!!!</div>
+            <div>• EMAIL ME!!</div>
+            <div>• DONT STEAL MY GIFS</div>
+            <div>• HI MOM</div>
+          </marquee>
         </div>
       </aside>
     </main>
 
     <footer class="bottom">
       <div class="hit">
-        <span class="label">Hit Counter:</span>
-        <span class="digits" aria-label="hit counter">
+        <span class="label">HIT COUNTER:</span>
+        <span class="digits" id="counter" aria-label="hit counter">
           <span>0</span><span>0</span><span>0</span><span>2</span><span>3</span><span>4</span>
         </span>
       </div>
 
       <div class="badges">
         <span class="badge">Best Viewed<br/>in Netscape!</span>
-        <span class="badge hot">AWESOME<br/>90's SITE!</span>
-        <span class="badge geo">GeoCities</span>
+        <span class="badge hot blink-fast">AWESOME<br/>90's SITE!</span>
+        <span class="badge geo wobble">GeoCities</span>
       </div>
     </footer>
+
+    <marquee class="marq3" behavior="scroll" scrollamount="14">
+      ☆☆☆ THANKS FOR VISITING ☆☆☆ EMAIL: totallyreal@email.com ☆☆☆
+      <span class="blink">CLICK HERE</span> ☆☆☆
+    </marquee>
   </div>
 
-  <!-- optional: extra “90s” flair -->
-  <marquee class="marq" behavior="alternate" scrollamount="6">
-    *** WELCOME 2 MY HOMEPAGE!!! *** DON'T FORGET TO SIGN THE GUESTBOOK!!! ***
-  </marquee>
+  <script>
+    // ultra-90s: fake “hit counter” ticks up on load
+    (function () {
+      const el = document.getElementById("counter");
+      if (!el) return;
+      const spans = Array.from(el.querySelectorAll("span"));
+      const digits = spans.map(s => parseInt(s.textContent, 10) || 0);
+
+      function render() {
+        spans.forEach((s, i) => s.textContent = digits[i]);
+      }
+
+      // random small increment
+      let ticks = 8 + Math.floor(Math.random() * 14);
+      const t = setInterval(() => {
+        // increment last digit like a cheap counter
+        for (let i = digits.length - 1; i >= 0; i--) {
+          digits[i]++;
+          if (digits[i] <= 9) break;
+          digits[i] = 0;
+        }
+        render();
+        ticks--;
+        if (ticks <= 0) clearInterval(t);
+      }, 90);
+    })();
+  </script>
 </body>
 </html>
